# cuba-thinking

./: .gitignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  patch.diff  patch_file.patch  run_mcp.sh  test_limit.patch  tsconfig.json
cuba_cognitive_engine/: Cargo.toml  cuba_cognitive_engine.cdx.json  deny.toml
cuba_cognitive_engine/src/: main.rs
cuba_cognitive_engine/src/engine/: anti_hallucination.rs  bias_detector.rs  budget.rs  claim_grounding.rs  contradiction_detector.rs  corrective_directives.rs  ewma_reward.rs  formatter.rs  mcts_graph.rs  memory_bridge.rs  metacognition.rs  micro_prm.rs  mod.rs  novelty_tracker.rs  quality_metrics.rs  sandbox.rs  semantic_similarity.rs  shared_utils.rs  stage_engine.rs  stage_validator.rs  thought_graph.rs  thought_session.rs
cuba_cognitive_engine/src/server/: mcp_protocol.rs  mod.rs  observability.rs
src/: formatter.ts  index.ts  types.ts
src/__tests__/: formatter.test.ts
src/services/: anti-hallucination.service.ts  bias-detector.service.spec.ts  bias-detector.service.ts  cognitive-processor.ts  embedding.service.test.ts  embedding.service.ts  nli.service.ts  quality-metrics.service.ts  stage-engine.service.ts  transformers-loader.ts
tests/services/: nli.service.test.ts
